# rolava

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-linux.yml
src/: ai_provider.rs  config.rs  main.rs  message_enricher.rs  pipeline.rs  transport.rs
src/ai_provider/: anthropic.rs  google_aistudio.rs  openai_compatible.rs  openrouter.rs
src/pipeline/: ai_action.rs  chat_pipeline.rs
src/repository/: db_manager.rs
src/transport/: message.rs  onebot.rs
