[package]
name = "rolava"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde_json = "1.0.120"
tokio-tungstenite = "=0.23.1"
futures-util = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31.0"
parking_lot = "0.12.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = "0.8"
async-trait = "0.1"
toml = "0.8"
rand = "0.8"
